# WarframeMarketPriceTracker

./: CMakeLists.txt  README.md
include/: useful.hpp  wmpt_functions.hpp  wmpt_getData.hpp  wmpt_tui.hpp  wmpt_types.hpp  wmpt_useful.hpp  wmpt_variables.hpp
include/nlohmann/: json.hpp
lib/WinToast/include/: wintoastlib.h
lib/WinToast/src/: wintoastlib.cpp
src/: main.cpp  wmpt_functions.cpp  wmpt_main.cpp  wmpt_tui.cpp  wmpt_types.cpp  wmpt_variables.cpp
